--- a/php/Makefile
+++ b/php/Makefile
@@ -2,4 +2,6 @@ default: up
 up:
 	docker-compose up -d --remove-orphans
 in: 
-	docker-compose exec yuri_php bash
+	docker-compose exec yuri_teste bash
+build:
+	docker-compose up -d --build --force-recreate
